<resources>
    <string name="app_name">FLC经纪人</string>
    <string name="changephone">更改手机号</string>
    <string name="pleaseinputphone">请输入手机号</string>
    <string name="inputcode">请输入验证码</string>
    <string name="getcode">获取验证码</string>
    <string name="next">下一步</string>
    <string name="newphone">新手机号</string>
    <string name="inputphonenew">请输入需要绑定的手机号</string>
    <string name="confirmchange">确认更换</string>
    <string name="activity_language_setting">设置</string>
    <string name="activity_language_save">保存</string>
    <string name="activity_language_chinase">简体中文</string>
    <string name="activity_language_japan">日文</string>
    <string name="activity_lishi_title">历史成交</string>
    <string name="activity_lianxiren_title">联系人</string>
    <string name="activity_details_price">价格：</string>
    <string name="activity_details_mianji">面积：</string>
    <string name="activity_details_water">水源充足：</string>
    <string name="activity_details_dixing">地形：</string>
    <string name="activity_details_turang">土壤：</string>
    <string name="activity_details_huanjing">环境：</string>
    <string name="activity_details_jiaotong">交通：</string>
    <string name="activity_details_jutiweizhi">具体位置：</string>
    <string name="activity_details_chaoxiang">朝向：</string>
    <string name="activity_details_niandai">年代：</string>
    <string name="activity_details_dianti">电梯：</string>
    <string name="activity_details_zhuangxiu">装修：</string>
    <string name="activity_details_louxing">楼型：</string>
    <string name="activity_details_xiaoqu">小区：</string>
    <string name="activity_details_huxing">户型图</string>
    <string name="activity_details_seemore">更多信息</string>
    <string name="activity_details_logo">最新开盘·户型以及优惠信息，免费致电售楼处</string>
    <string name="activity_details_bianjia">变价通知</string>
    <string name="activity_details_kaipan">开盘通知</string>
    <string name="activity_details_zhoubian">周边设施</string>
    <string name="activity_details_shop">商场</string>
    <string name="activity_details_school">学校</string>
    <string name="activity_details_youeryuan">幼儿园</string>
    <string name="activity_details_yiyuan">医院</string>
    <string name="activity_details_huibao">回报率：</string>
    <string name="activity_details_louceng">楼层：</string>
    <string name="activity_details_nianfen">建筑年份：</string>
    <string name="activity_details_gouzao">建筑构造：</string>
    <string name="activity_details_shebei">设备：</string>
    <string name="activity_details_waiguan">外观：</string>
    <string name="activity_details_neiguan">内观：</string>
    <string name="activity_details_chezhan">车站距离：</string>
    <string name="activity_details_jingdian">景点交通：</string>
    <string name="activity_details_shangyejie">商业街距离：</string>
    <string name="activity_details_shifoujiejiao">是否街角：</string>
    <string name="activity_details_nengfougaojianzhu">能否高建筑：</string>
    <string name="activity_details_zhouweicaiguang">周围采光：</string>
    <string name="activity_details_zhouweifengjing">周围风景：</string>
    <string name="activity_details_linjie">临街距离：</string>
    <string name="activity_details_chengdong">成栋：</string>
    <string name="activity_details_stop_car">停车场：</string>
    <string name="activity_details_daizhuangxiu">带装修：</string>
    <string name="activity_details_bangong">办公用具：</string>
    <string name="activity_details_diduan">地段：</string>
    <string name="activity_details_shoujia">售价</string>
    <string name="activity_details_danjia">单价</string>
    <string name="activity_details_mianjia">面积</string>
    <string name="activity_details_caizhi">装修材质：</string>
    <string name="activity_login_title">登录</string>
    <string name="activity_login_register">注册</string>
    <string name="activity_login_put_number">请输入手机号</string>
    <string name="activity_login_put_pass">请输入密码</string>
    <string name="activity_login_put_code">请输入验证码</string>
    <string name="activity_main_weichar">微聊</string>
    <string name="activity_main_mine">我的</string>
    <string name="activity_manager_huifulv">微聊回复率</string>
    <string name="activity_manager_zhuying">主营：昌平昌平沙河</string>
    <string name="activity_manager_title">经纪人主页</string>
    <string name="activity_manager_nianxian">服务年限</string>
    <string name="activity_manager_people_count">服务人数</string>
    <string name="activity_manager_zaishoufang">在售房</string>
    <string name="activity_manager_zaizufang">在租房</string>
    <string name="activity_mydata_title">个人信息</string>
    <string name="activity_mydata_phone">头像</string>
    <string name="activity_mydaya_name">昵称</string>
    <string name="activity_mydaya_sex">性别</string>
    <string name="activity_mydaya_birth">生日</string>
    <string name="activity_mydaya_erweima">个人二维码</string>
    <string name="activity_mydaya_bing_number">账号绑定</string>
    <string name="activity_mydaya_bing">手机号绑定</string>
    <string name="activity_pingjia_title">评价我的</string>
    <string name="activity_register_sure_pass">请输入确认密码</string>
    <string name="activity_register_xieyi">注册即表示同意</string>
    <string name="activity_register_click_xieyi">《用户协议》</string>
    <string name="activity_search_title">请输入查询内容</string>
    <string name="activity_search">搜索</string>
    <string name="see_more_fy">房源信息</string>
    <string name="see_more_fymc">房源名称</string>
    <string name="see_more_xqmc">小区名称：</string>
    <string name="see_more_cx">朝向：</string>
    <string name="see_more_jznf">建筑年份：</string>
    <string name="see_more_glf">管理费：</string>
    <string name="see_more_jzgz">建筑构造：</string>
    <string name="see_more_df">电费：</string>
    <string name="see_more_sf">水费：</string>
    <string name="see_more_lc">楼层：</string>
    <string name="see_more_ys">洋室：</string>
    <string name="see_more_hs">和室：</string>
    <string name="see_more_my">沐浴一体：</string>
    <string name="see_more_glhs">管理会社：</string>
    <string name="see_more_jtwz">具体位置：</string>
    <string name="see_more_sb">设备：</string>
    <string name="see_more_ws">瓦斯：</string>
    <string name="see_more_zxcz">装修材质：</string>
    <string name="see_more_czjl">车站距离：</string>
    <string name="see_more_cwfj">窗外风景：</string>
    <string name="see_more_wg">外观：</string>
    <string name="see_more_ng">内观：</string>
    <string name="activity_setting_more_language">多语言</string>
    <string name="activity_setting_about">关于房产客</string>
    <string name="activity_finsh_login">退出登录</string>
    <string name="activity_xieyi_title">用户协议</string>
    <string name="activity_zuijin_title">最近带看</string>
    <string name="select_photo">从相册中选择</string>
    <string name="select_paizhao">拍照</string>
    <string name="select_canner">取消</string>
    <string name="put_your_name">请输入昵称</string>
    <string name="mine_title">我的</string>
    <string name="mine_jiarupingtai">您加入平台已经</string>
    <string name="mine_leijijiaoyie">累计交易额</string>
    <string name="mine_sellhouse">买房卖房</string>
    <string name="mine_lishichengjiao">历史成交</string>
    <string name="mine_pingjun">平均成交</string>
    <string name="mine_lianxiren">我的联系人</string>
    <string name="mine_pingjia">我的评价</string>
    <string name="dialog_sure_finsh">您确定退出吗？</string>
    <string name="dialog_canner">取消</string>
    <string name="dialog_sure">确认</string>
    <string name="geren_erweima">个人二维码</string>
    <string name="act_chat_title">顾问姓名</string>
    <string name="act_chat_evaluation">评价</string>
    <string name="see_more">更多信息</string>
    <string name="string_jibenxinxi">基本信息</string>
    <string name="string_wujianmingcheng">物件名称：</string>
    <string name="string_shoujia">售&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;价：</string>
    <string name="string_huxing">户&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;型：</string>
    <string name="string_dongcengshu">栋&#160;&#160;层&#160;&#160;数：</string>
    <string name="string_tudimianji">土地面积：</string>
    <string name="string_jianzumianji">建筑面积：</string>
    <string name="string_suoyouquan">所&#160;&#160;有&#160;&#160;权：</string>
    <string name="string_jianzunianfen">建筑年份：</string>
    <string name="string_jianzushejigongsi">建筑以及设计公司：</string>
    <string name="string_jianzugouzao">建筑构造：</string>
    <string name="string_chaoxiang">朝&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;向：</string>
    <string name="string_jianzufugailv">建筑覆盖率：</string>
    <string name="string_rongjilv">容&#160;&#160;积&#160;&#160;率：</string>
    <string name="string_rujuriqi">入居日期：</string>
    <string name="string_xianzhuang">现&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;状：</string>
    <string name="string_tingchechang">停&#160;&#160;车&#160;&#160;场：</string>
    <string name="string_gongkaiqingbaori">公开情报日：</string>
    <string name="string_shiwaixinxi">室外信息</string>
    <string name="string_diduan">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;段：</string>
    <string name="string_jutiweizhi">具体位置：</string>
    <string name="string_zhuyaochezhan">主要车站：</string>
    <string name="string_chezhanjuli">车站距离：</string>
    <string name="string_daolulinjiejuli">道路临街距离：</string>
    <string name="string_tudi">土&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;地：</string>
    <string name="string_shineixinxi">室内信息</string>
    <string name="string_shineishebei">室内设备：</string>
    <string name="string_chufang">厨&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;房：</string>
    <string name="string_weishengjian">卫&#160;&#160;生&#160;&#160;间：</string>
    <string name="string_yushi">浴&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;室：</string>
    <string name="string_baozhangxinxi">保障信息</string>
    <string name="string_xingneng">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;能：</string>
    <string name="string_zhengmingshu">证&#160;&#160;明&#160;&#160;书：</string>
    <string name="string_xiacibaozhang">瑕疵保证：</string>
    <string name="string_beizhu">备&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;注：</string>
    <string name="string_beizhuxinxi">备注</string>
    <string name="string_mianji">面&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;积：</string>
    <string name="string_shuiyuan">水&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;源：</string>
    <string name="string_dixing">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;形：</string>
    <string name="string_turangqingkuang">土壤情况：</string>
    <string name="string_huibaolv">回&#160;&#160;报&#160;&#160;率：</string>
    <string name="string_zhoubiansheshi">周边设施：</string>
    <string name="string_jidianloucengshu">酒店楼层数：</string>
    <string name="string_diyuyongtu">地域用途：</string>
    <string name="string_shoumaileixing">售卖类型：</string>
    <string name="string_jianzugongsi">建筑公司：</string>
    <string name="string_yingyeleixing">营业类型：</string>
    <string name="string_tingchewei">停&#160;&#160;车&#160;&#160;位：</string>
    <string name="string_shangpuzhaopai">商铺招牌：</string>
    <string name="string_jujiagaodu">举架高度：</string>
    <string name="string_shiwaishezhi">室外设置：</string>
    <string name="string_qitaxinxi">其他信息</string>
    <string name="string_tezheng">特&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;征：</string>
    <string name="string_tiaojian">条&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;件：</string>
    <string name="string_zujin">租&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;金：</string>
    <string name="string_chuqifeiyong">初期费用：</string>
    <string name="string_shuidiandengfeiyong">水电等费用：</string>
    <string name="string_louceng">楼&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;层：</string>
    <string name="string_fangjianzhuangkuang">房间状况：</string>
    <string name="string_qianyuenianxian">签约年限：</string>
    <string name="string_guanlixinxi">管理信息</string>
    <string name="string_guanlihuishe">管理会社：</string>
    <string name="string_guanlifei">管&#160;&#160;理&#160;&#160;费：</string>
    <string name="string_xiushanfei">修&#160;&#160;缮&#160;&#160;费：</string>
    <string name="string_guanli">管&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;理：</string>
    <string name="string_chuangwaifengjing">窗外风景：</string>
    <string name="meiyousousuojieguo">没有搜索结果</string>
</resources>