<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/roundcircle"
    android:layout_height="match_parent">
    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:padding="10dp"
        android:textSize="15sp"
        android:textColor="#343434"
        android:text="@string/dialog_sure_finsh"
        />
    <View
        android:layout_width="match_parent"
        android:background="#f5f5f5"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btn_dismiss"
            android:layout_weight="1"
            android:background="#fff"
            android:gravity="center"
            android:textColor="#343434"
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_canner"
            />
        <View
            android:layout_width="1dp"
            android:background="#f5f5f5"
            android:layout_height="match_parent"/>

        <Button
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#343434"
            android:background="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:text="@string/dialog_sure"
            android:id="@+id/btn_call" />

    </LinearLayout>
</LinearLayout>
