<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#808080"
              android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/roundcircle"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/dialog_tv_tuku"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/select_photo"
            android:textColor="@color/textblack"
            android:textSize="16sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="#eee"></View>

        <TextView
            android:id="@+id/dialog_tv_pai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/select_paizhao"
            android:textColor="@color/textblack"
            android:textSize="16sp"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/dialog_tv_dismiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/select_canner"
        android:background="@drawable/roundcircle"
        android:textColor="@color/textblack"
        android:textSize="16sp"/>


</LinearLayout>