<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_zui_jin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.overseas.overseas.mine.ZuiJinActivity">

    <LinearLayout
        android:background="@color/shihuangse"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dip">
        <ImageView
            android:id="@+id/back_img"
            android:padding="15dp"
            android:src="@drawable/back"
            android:layout_width="50dip"
            android:layout_height="50dip" />
        <TextView
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#fff"
            android:text="@string/activity_language_setting"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        <ImageView
            android:padding="13dp"
            android:layout_width="50dip"
            android:layout_height="50dip" />
    </LinearLayout>
<LinearLayout
    android:id="@+id/language_layout"
    android:background="#fff"
    android:layout_marginTop="10dip"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="45dip">
    <TextView
        android:clickable="false"
        android:paddingLeft="15dip"
        android:gravity="center_vertical"
        android:textColor="#333"
        android:textSize="15sp"
        android:text="@string/activity_setting_more_language"
        android:layout_weight="1"
        android:layout_width="0dip"
        android:layout_height="match_parent" />
    <TextView
        android:clickable="false"
        android:gravity="center_vertical"
        android:textColor="#999"
        android:textSize="15sp"
        android:text="@string/activity_language_japan"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />
    <ImageView
        android:clickable="false"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="15dip"
        android:layout_gravity="center_vertical"
        android:src="@drawable/gengduo"
        android:layout_width="15dip"
        android:layout_height="15dip" />
</LinearLayout>
    <View
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:background="#eee"
        android:layout_width="match_parent"
        android:layout_height="1dip"></View>
    <LinearLayout
        android:id="@+id/about_layout"
        android:background="#fff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dip">
        <TextView
            android:clickable="false"
            android:paddingLeft="15dip"
            android:gravity="center_vertical"
            android:textColor="#333"
            android:textSize="15sp"
            android:text="@string/activity_setting_about"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="match_parent" />
        <ImageView
            android:clickable="false"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="15dip"
            android:layout_gravity="center_vertical"
            android:src="@drawable/gengduo"
            android:layout_width="15dip"
            android:layout_height="15dip" />
    </LinearLayout>
    <Button
        android:id="@+id/finish_login"
        android:textColor="#fff"
        android:text="@string/activity_finsh_login"
        android:layout_marginRight="25dip"
        android:layout_marginLeft="25dip"
        android:background="@drawable/round_shihuangse"
        android:layout_marginTop="50dip"
        android:layout_width="match_parent"
        android:layout_height="45dip" />
</LinearLayout>
