<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@color/shihuangse"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:padding="15dp"
            android:src="@drawable/back" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="35dip"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/round_white">

            <ImageView
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dip"
                android:src="@drawable/sousuo" />

            <EditText
                android:id="@+id/act_search_manager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:singleLine="true"
                android:paddingRight="5dp"
                android:gravity="center_vertical"
                android:hint="@string/activity_search_title"
                android:paddingLeft="10dip"
                android:textSize="13sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:gravity="center"
            android:text="@string/activity_search"
            android:textColor="#fff"
            android:textSize="14sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/search_list_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_noContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/meiyousousuojieguo"
            android:textColor="@color/text_black"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>